[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jkcom"
version = "0.1.0"
authors = [
  { name="JKCOM Team", email="team@jkcom.ia" },
]
description = "AI-Powered GPS Mapping & Localization Stack for Autonomous EVs"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "opencv-python",
    "torch",
    "torchvision",
    "ultralytics",
]

[project.urls]
"Homepage" = "https://github.com/username/jkcom"
"Bug Tracker" = "https://github.com/username/jkcom/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["jkcom*"]
